k8s/cadvisor-deployment.yaml
# k8s/cadvisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadvisor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      containers:
        - name: cadvisor
          image: gcr.io/cadvisor/cadvisor:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: varrun
              mountPath: /var/run
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: dockershim
              mountPath: /var/lib/docker
              readOnly: true
            - name: devkmsg
              mountPath: /dev/kmsg
          resources:
            limits:
              memory: "512Mi"
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: varrun
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: dockershim
          hostPath:
            path: /var/lib/docker
        - name: devkmsg
          hostPath:
            path: /dev/kmsg
