k8s/monitoring-ingress.yaml
# k8s/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.codingholiday.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090

    - host: cadvisor.codingholiday.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadvisor-service
                port:
                  number: 8080

    - host: grafana.codingholiday.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
